# tankarta-mcp

./: Dockerfile  README.md  mcp.json  pyproject.toml
.github/workflows/: build.yml
src/tankarta_mcp/: __init__.py
