[project]
name = "tankarta-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Patrik Segedy", email = "psegedy@redhat.com" }
]
requires-python = ">=3.13"
dependencies = [
    "fastmcp>=2.11.3",
    "httpx>=0.28.1",
]

[project.scripts]
tankarta-mcp = "tankarta_mcp:main"

[build-system]
requires = ["uv_build>=0.8.4,<0.9.0"]
build-backend = "uv_build"
